tests/NormalTests/paczka1/small_fuzzy/41082389.err
Error in line 4: S869 S190 76,3
Error in line 8: NwrVIV S294 25,1
